# helloagents-deepresearch

./: README.md
backend/: .env  pyproject.toml  requirement.txt
backend/notes/: note_20260430_022029_0.md  note_20260430_022031_1.md  note_20260430_022051_2.md  note_20260430_022801_3.md  note_20260430_022803_4.md  note_20260430_022822_5.md  note_20260430_023011_6.md  note_20260430_023012_7.md  note_20260430_023029_8.md  note_20260430_023644_9.md  note_20260430_023646_10.md  note_20260430_023703_11.md  note_20260430_023906_12.md  note_20260430_023907_13.md  note_20260430_023924_14.md  note_20260430_024332_15.md  note_20260430_024334_16.md  note_20260430_024350_17.md  note_20260430_075249_18.md  notes_index.json
backend/src/: agent.py  config.py  main.py
backend/src/helloagents_deep_researcher.egg-info/: PKG-INFO
